; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_cproxy.c_init_thunk.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_cproxy.c_init_thunk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thunk = type { i32, i32 }

@thunk_template = common dso_local global %struct.thunk zeroinitializer, align 4
@call_stubless_func = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.thunk*, i32)* @init_thunk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_thunk(%struct.thunk* %0, i32 %1) #0 {
  %3 = alloca %struct.thunk*, align 8
  %4 = alloca i32, align 4
  store %struct.thunk* %0, %struct.thunk** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.thunk*, %struct.thunk** %3, align 8
  %6 = bitcast %struct.thunk* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.thunk* @thunk_template to i8*), i64 8, i1 false)
  %7 = load i32, i32* %4, align 4
  %8 = load %struct.thunk*, %struct.thunk** %3, align 8
  %9 = getelementptr inbounds %struct.thunk, %struct.thunk* %8, i32 0, i32 0
  store i32 %7, i32* %9, align 4
  %10 = load i32, i32* @call_stubless_func, align 4
  %11 = load %struct.thunk*, %struct.thunk** %3, align 8
  %12 = getelementptr inbounds %struct.thunk, %struct.thunk* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
